# sad-app-v2

./: .gitignore  BOTAO_SELECIONAR_TODOS.md  CORRECAO_BOTAO_TELA_CHEIA.md  CORRECAO_RENOMEACAO_ARQUIVOS.md  FUNCIONALIDADE_RIR_IMPLEMENTADA.md  FUNCIONALIDADE_RIR_RENOMEACAO_COMPLETA.md  INTEGRACAO_RIR_COMBOBOX_CONCLUIDA.md  MELHORIAS_UX_UI.md  README.md  RESUMO_MELHORIAS_UX_UI.md  SIMPLIFICACAO_INTERFACE_RESOLUCAO.md  TESTE_BOTAO_DINAMICO.md  UNIFICACAO_BOTOES_ACAO.md  build.bat  build_exe.py  build_optimized.bat  check_base_template.py  check_manifest_content.py  check_template.py  create_screenshots_guide.py  create_test_files.py  debug_formatacao_detalhada.py  debug_organization.py  debug_regex_rir.py  debug_rir_detailed.py  debug_rir_flow.py  debug_rir_naming.py  debug_rir_problem.py  demo_completa.py  demo_logs_rir.py  documento_design_software.md  fix_build.bat  main.py  manage_builds.bat  pyproject.toml  rebuild_exe.bat  run.py  test_both_rir_methods.py  test_cenario_real_revisao.py  test_checkbox_activation.py  (+20 more)
config/: patterns.yaml
pyinstaller_hooks/: hook-sad_app_optimization.py
scripts/: create_better_test_files.py
src/sad_app_v2/: main.py
src/sad_app_v2/core/: domain.py  exceptions.py  interfaces.py
src/sad_app_v2/infrastructure/: config_manager.py  excel_reader.py  extraction.py  file_system.py  optimization.py  optimized_extractor.py  safe_file_operations.py  (+2 more)
teste_gui/: documento_pid.docx  documento_rir.docx
tests/fixtures/: manifesto_completo.xlsx  manifesto_exemplo.xlsx  template_exemplo.xlsx
tests/integration/: test_end_to_end.py
(+24 files in other folders)
